[package]
name = "dioxus"
version = "0.2.4"
authors = ["Jonathan Kelley"]
edition = "2021"

[dependencies]
dioxus-core = { path = "./packages/core", version = "^0.2.1" }
dioxus-html = { path = "./packages/html", version = "^0.2.1", optional = true }

[features]
default = ["html"]

html = ["dioxus-html"]


[workspace]
members = [
    "packages/core",
    "packages/html",
]

[dev-dependencies]
dioxus = { path = "." }
